Add Kubernetes files

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,2 @@
-FROM node:17-alpine3.14
-
-EXPOSE 3000
-COPY . /app
-
-WORKDIR /app
-
-CMD ["npm", "start"]
+FROM nginx:1.19.0
+COPY build/ /usr/share/nginx/html
